# python_template

./: README.md
{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/scripts/: setup_uv.sh
{{cookiecutter.project_slug}}/_local/: setup.sh
